# illegal-dumping-map

./: .env.example  .gitignore  AGENTS.md  README.md  app.json  eslint.config.js  get-data.py  oxlint.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  sentry.edge.config.ts  vitest.config.ts
convex/: cache.ts  cacheActions.ts  parking.ts  requests.ts  schema.ts  stats.ts  weekly.ts
docs/: BAY_AREA_ILLEGAL_DUMPING_RESEARCH.md  OAKLAND_311_API.md  OAKLAND_DATASETS_POTENTIAL.md  PARKING_CITATIONS_RESEARCH.md  RESEARCH_PLAN_US_CITIES_ILLEGAL_DUMPING_RESEARCH.md  US_CITIES_ILLEGAL_DUMPING_RESEARCH.md
src/app/: ConvexClientProvider.tsx  ReactQueryProvider.tsx  globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/chicago/: page.tsx
src/app/dallas/: page.tsx
src/app/kansas-city/: page.tsx
src/app/los-angeles/: page.tsx
src/app/montgomery-county-md/: page.tsx
src/app/new-york/: page.tsx
src/app/oakland/: page.tsx
src/app/parking/: page.tsx
src/app/san-francisco/: page.tsx
src/components/: CityCard.tsx  CityPageLayout.tsx  MultiYearWeeklyChart.tsx  ParkingCityPageLayout.tsx  ParkingDistribution.tsx  ParkingMap.tsx  ParkingStats.tsx  ParkingTable.tsx  RequestDistribution.tsx  RequestMap.tsx  RequestTable.tsx  Stats.tsx  ThemeToggle.tsx  WeeklyTrendsChart.tsx
src/contexts/: ThemeContext.tsx
src/db/: index.ts  schema.ts
src/hooks/: useCityData.ts  useParkingData.ts
src/lib/: cache.memory.ts  cache.sqlite.ts  cache.ts  convex-client.ts  parking-citations.ts  socrata.ts  socrata.ts.backup  utils.ts
(+15 files in other folders)
